2005-07-04  Yves Combe  <yves@ycombe.net>

	add missing files.
	add some bindings in gcompris python bindings.

	* src/boards/menu.c: (item_event):
	* src/boards/py-mod-gcompris.c: (py_gcompris_child_watch_add),
	(py_gcompris_spawn_async), (py_board_run_next),
	(py_board_config_start), (py_board_config_stop):
	* src/boards/python/admin/Makefile.am:
	* src/gcompris/board.c: (board_stop), (get_board_paused),
	(board_run_next):
	* src/gcompris/board.h:
	* src/gcompris/board_config.c: (board_config_start),
	(board_config_stop):
	* src/gcompris/board_config.h:

2005-07-04  Yves Combe  <yves@ycombe.net>

	rename users.py profiles.py in module_users.py and module_profiles.py.
	change administration.py to load automaticly module_*.py
	make config_start and config_stop running in python module (test in board.c, to ne removed).

	* src/boards/python.c: (pythonboard_config_start),
	(pythonboard_config_stop):
	* src/boards/python/admin/module_profiles.py:
	* src/boards/python/admin/module_users.py:
	* src/boards/python/admin/profiles.py:
	* src/boards/python/admin/users.py:
	* src/boards/python/administration.py:
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board.c: (board_play):
	* src/gcompris/gcompris.h:
	* src/gcompris/plugin.h:

2005-07-04  Yves Combe  <yves@ycombe.net>

	add config_start and config_end entry point to all plugin.
	modify python initialisation to detect config_start in python file and setup it correctly in plugin pointer

	* src/boards/advanced_colors.c:
	* src/boards/algebra.c:
	* src/boards/algebra_guesscount.c:
	* src/boards/animtest.c:
	* src/boards/canal_lock.c:
	* src/boards/chess.c:
	* src/boards/click_on_letter.c:
	* src/boards/clickgame.c:
	* src/boards/clockgame.c:
	* src/boards/colors.c:
	* src/boards/draw.c:
	* src/boards/enumerate.c:
	* src/boards/erase.c:
	* src/boards/fifteen.c:
	* src/boards/gletters.c:
	* src/boards/hanoi.c:
	* src/boards/imageid.c:
	* src/boards/leftright.c:
	* src/boards/machpuzzle.c:
	* src/boards/maze.c: